--- a/style.css
+++ b/style.css
@@ -616,8 +616,8 @@ video {
 .mb-10{
   margin-bottom: 2.5rem;
 }
-.mb-12{
-  margin-bottom: 3rem;
+.mb-2{
+  margin-bottom: 0.5rem;
 }
 .mb-24{
   margin-bottom: 6rem;
@@ -636,6 +636,9 @@ video {
 }
 .ml-64{
   margin-left: 16rem;
+}
+.ml-auto{
+  margin-left: auto;
 }
 .mr-auto{
   margin-right: auto;
@@ -678,9 +681,6 @@ video {
 }
 .mt-\[648px\]{
   margin-top: 648px;
-}
-.mt-\[72px\]{
-  margin-top: 72px;
 }
 .mt-auto{
   margin-top: auto;
@@ -769,17 +769,11 @@ video {
 .h-1{
   height: 0.25rem;
 }
-.h-10{
-  height: 2.5rem;
-}
-.h-12{
-  height: 3rem;
+.h-16{
+  height: 4rem;
 }
 .h-2{
   height: 0.5rem;
-}
-.h-20{
-  height: 5rem;
 }
 .h-4{
   height: 1rem;
@@ -820,20 +814,11 @@ video {
 .w-1\/3{
   width: 33.333333%;
 }
-.w-10{
-  width: 2.5rem;
-}
-.w-12{
-  width: 3rem;
-}
-.w-20{
-  width: 5rem;
+.w-16{
+  width: 4rem;
 }
 .w-4{
   width: 1rem;
-}
-.w-56{
-  width: 14rem;
 }
 .w-6{
   width: 1.5rem;
@@ -1165,8 +1150,8 @@ video {
 .grid-flow-col-dense{
   grid-auto-flow: column dense;
 }
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .flex-row{
   flex-direction: row;
@@ -1306,8 +1291,8 @@ video {
 .justify-items-stretch{
   justify-items: stretch;
 }
-.gap-16{
-  gap: 4rem;
+.gap-8{
+  gap: 2rem;
 }
 .gap-x-1{
   -moz-column-gap: 0.25rem;
@@ -1847,22 +1832,18 @@ video {
 .p-1{
   padding: 0.25rem;
 }
-.p-12{
-  padding: 3rem;
-}
 .p-2{
   padding: 0.5rem;
 }
 .p-5{
   padding: 1.25rem;
 }
+.p-6{
+  padding: 1.5rem;
+}
 .px-12{
   padding-left: 3rem;
   padding-right: 3rem;
-}
-.px-24{
-  padding-left: 6rem;
-  padding-right: 6rem;
 }
 .px-3{
   padding-left: 0.75rem;
@@ -1896,10 +1877,6 @@ video {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1907,6 +1884,10 @@ video {
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .pb-1{
   padding-bottom: 0.25rem;
@@ -1920,9 +1901,6 @@ video {
 .pb-32{
   padding-bottom: 8rem;
 }
-.pl-20{
-  padding-left: 5rem;
-}
 .pl-40{
   padding-left: 10rem;
 }
@@ -1932,14 +1910,8 @@ video {
 .pr-1{
   padding-right: 0.25rem;
 }
-.pr-12{
-  padding-right: 3rem;
-}
 .pr-32{
   padding-right: 8rem;
-}
-.pr-36{
-  padding-right: 9rem;
 }
 .pr-4{
   padding-right: 1rem;
@@ -1949,6 +1921,9 @@ video {
 }
 .pt-28{
   padding-top: 7rem;
+}
+.pt-16{
+  padding-top: 4rem;
 }
 .text-left{
   text-align: left;
@@ -2002,10 +1977,6 @@ video {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -2013,9 +1984,6 @@ video {
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
-}
-.text-\[17px\]{
-  font-size: 17px;
 }
 .text-lg{
   font-size: 1.125rem;
@@ -2708,17 +2676,26 @@ video {
   .sm\:mb-12{
     margin-bottom: 3rem;
   }
+  .sm\:mt-auto{
+    margin-top: auto;
+  }
+  .sm\:mt-20{
+    margin-top: 5rem;
+  }
+  .sm\:mt-16{
+    margin-top: 4rem;
+  }
   .sm\:block{
     display: block;
-  }
-  .sm\:inline{
-    display: inline;
   }
   .sm\:flex{
     display: flex;
   }
   .sm\:hidden{
     display: none;
+  }
+  .sm\:aspect-square{
+    aspect-ratio: 1 / 1;
   }
   .sm\:h-5{
     height: 1.25rem;
@@ -2743,8 +2720,17 @@ video {
     --tw-translate-y: 70%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
+  .sm\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
   .sm\:flex-row{
     flex-direction: row;
+  }
+  .sm\:gap-7{
+    gap: 1.75rem;
+  }
+  .sm\:gap-5{
+    gap: 1.25rem;
   }
   .sm\:gap-x-2{
     -moz-column-gap: 0.5rem;
@@ -2769,6 +2755,10 @@ video {
     padding-left: 1rem;
     padding-right: 1rem;
   }
+  .sm\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
   .sm\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -2777,12 +2767,18 @@ video {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
   }
+  .sm\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
   .sm\:pt-16{
     padding-top: 4rem;
   }
-  .sm\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .sm\:pt-28{
+    padding-top: 7rem;
+  }
+  .sm\:pt-24{
+    padding-top: 6rem;
   }
   .sm\:underline{
     text-decoration-line: underline;
@@ -2796,8 +2792,17 @@ video {
   .md\:mt-\[815px\]{
     margin-top: 815px;
   }
-  .md\:hidden{
-    display: none;
+  .md\:h-20{
+    height: 5rem;
+  }
+  .md\:h-7{
+    height: 1.75rem;
+  }
+  .md\:w-20{
+    width: 5rem;
+  }
+  .md\:w-7{
+    width: 1.75rem;
   }
   .md\:translate-x-\[-90\%\]{
     --tw-translate-x: -90%;
@@ -2805,6 +2810,9 @@ video {
   }
   .md\:items-start{
     align-items: flex-start;
+  }
+  .md\:gap-8{
+    gap: 2rem;
   }
   .md\:px-20{
     padding-left: 5rem;
@@ -2814,6 +2822,10 @@ video {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+  .md\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
   .md\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -2822,8 +2834,15 @@ video {
     padding-top: 6rem;
     padding-bottom: 6rem;
   }
+  .md\:pt-28{
+    padding-top: 7rem;
+  }
   .md\:text-left{
     text-align: left;
+  }
+  .md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -2831,8 +2850,14 @@ video {
   .lg\:top-\[99px\]{
     top: 99px;
   }
+  .lg\:mt-14{
+    margin-top: 3.5rem;
+  }
   .lg\:mt-\[819px\]{
     margin-top: 819px;
+  }
+  .lg\:mt-20{
+    margin-top: 5rem;
   }
   .lg\:block{
     display: block;
@@ -2840,8 +2865,20 @@ video {
   .lg\:inline{
     display: inline;
   }
+  .lg\:h-10{
+    height: 2.5rem;
+  }
+  .lg\:h-8{
+    height: 2rem;
+  }
+  .lg\:w-10{
+    width: 2.5rem;
+  }
   .lg\:w-64{
     width: 16rem;
+  }
+  .lg\:w-8{
+    width: 2rem;
   }
   .lg\:translate-x-\[-80\%\]{
     --tw-translate-x: -80%;
@@ -2855,6 +2892,9 @@ video {
     --tw-scale-x: 1.25;
     --tw-scale-y: 1.25;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .lg\:gap-10{
+    gap: 2.5rem;
   }
   .lg\:space-x-12 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
@@ -2873,17 +2913,19 @@ video {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
   }
+  .lg\:pr-16{
+    padding-right: 4rem;
+  }
   .lg\:pr-36{
     padding-right: 9rem;
   }
-  .lg\:pr-28{
-    padding-right: 7rem;
+  .lg\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
-  .lg\:pr-0{
-    padding-right: 0px;
-  }
-  .lg\:pr-16{
-    padding-right: 4rem;
+  .lg\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }
   .lg\:hover\:rotate-3:hover{
     --tw-rotate: 3deg;
@@ -2900,6 +2942,28 @@ video {
 }
 
 @media (min-width: 1280px){
+  .xl\:ml-64{
+    margin-left: 16rem;
+  }
+  .xl\:mt-20{
+    margin-top: 5rem;
+  }
+  .xl\:h-12{
+    height: 3rem;
+  }
+  .xl\:w-12{
+    width: 3rem;
+  }
+  .xl\:gap-12{
+    gap: 3rem;
+  }
+  .xl\:p-8{
+    padding: 2rem;
+  }
+  .xl\:px-16{
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
   .xl\:text-5xl{
     font-size: 3rem;
     line-height: 1;
@@ -2910,11 +2974,20 @@ video {
 }
 
 @media (min-width: 1536px){
+  .\32xl\:h-10{
+    height: 2.5rem;
+  }
+  .\32xl\:w-10{
+    width: 2.5rem;
+  }
   .\32xl\:w-auto{
     width: auto;
   }
   .\32xl\:flex-row{
     flex-direction: row;
+  }
+  .\32xl\:gap-16{
+    gap: 4rem;
   }
   .\32xl\:gap-x-10{
     -moz-column-gap: 2.5rem;
@@ -2923,6 +2996,13 @@ video {
   .\32xl\:rounded-t-lg{
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
+  }
+  .\32xl\:p-12{
+    padding: 3rem;
+  }
+  .\32xl\:px-24{
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
   .\32xl\:pr-12{
     padding-right: 3rem;
