--- a/style.css
+++ b/style.css
@@ -634,12 +634,6 @@ video {
 .ml-2{
   margin-left: 0.5rem;
 }
-.ml-64{
-  margin-left: 16rem;
-}
-.ml-auto{
-  margin-left: auto;
-}
 .mr-auto{
   margin-right: auto;
 }
@@ -652,14 +646,8 @@ video {
 .mt-12{
   margin-top: 3rem;
 }
-.mt-16{
-  margin-top: 4rem;
-}
 .mt-2{
   margin-top: 0.5rem;
-}
-.mt-20{
-  margin-top: 5rem;
 }
 .mt-24{
   margin-top: 6rem;
@@ -682,8 +670,32 @@ video {
 .mt-\[648px\]{
   margin-top: 648px;
 }
-.mt-auto{
-  margin-top: auto;
+.ml-auto{
+  margin-left: auto;
+}
+.ml-64{
+  margin-left: 16rem;
+}
+.ml-10{
+  margin-left: 2.5rem;
+}
+.mb-\[600px\]{
+  margin-bottom: 600px;
+}
+.mb-\[1000px\]{
+  margin-bottom: 1000px;
+}
+.mb-\[500px\]{
+  margin-bottom: 500px;
+}
+.mt-\[-500px\]{
+  margin-top: -500px;
+}
+.mt-\[-400px\]{
+  margin-top: -400px;
+}
+.mt-\[-200px\]{
+  margin-top: -200px;
 }
 .box-border{
   box-sizing: border-box;
@@ -763,9 +775,6 @@ video {
 .hidden{
   display: none;
 }
-.aspect-square{
-  aspect-ratio: 1 / 1;
-}
 .h-1{
   height: 0.25rem;
 }
@@ -808,6 +817,12 @@ video {
 .h-full{
   height: 100%;
 }
+.h-\[580px\]{
+  height: 580px;
+}
+.h-\[240px\]{
+  height: 240px;
+}
 .w-1\/2{
   width: 50%;
 }
@@ -839,6 +854,12 @@ video {
   width: 220px;
 }
 .w-full{
+  width: 100%;
+}
+.w-\[320px\]{
+  width: 320px;
+}
+.w-\[100\%\]{
   width: 100%;
 }
 .max-w-3xl{
@@ -1733,11 +1754,11 @@ video {
 .bg-\[url\(\'\/public\/images\/third_section_garden\.png\'\)\]{
   background-image: url('/public/images/third_section_garden.png');
 }
-.bg-gradient-to-b{
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
 .bg-\[url\(\'public\/images\/third_section_garden\.png\'\)\]{
   background-image: url('public/images/third_section_garden.png');
+}
+.bg-gradient-to-b{
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 .from-transparent{
   --tw-gradient-from: transparent var(--tw-gradient-from-position);
@@ -1871,6 +1892,10 @@ video {
   padding-left: 16rem;
   padding-right: 16rem;
 }
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1891,14 +1916,6 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-.px-16{
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
 .pb-1{
   padding-bottom: 0.25rem;
 }
@@ -1908,11 +1925,8 @@ video {
 .pb-16{
   padding-bottom: 4rem;
 }
-.pb-32{
-  padding-bottom: 8rem;
-}
-.pl-40{
-  padding-left: 10rem;
+.pb-20{
+  padding-bottom: 5rem;
 }
 .pl-6{
   padding-left: 1.5rem;
@@ -1920,23 +1934,23 @@ video {
 .pr-1{
   padding-right: 0.25rem;
 }
-.pr-32{
-  padding-right: 8rem;
-}
 .pr-4{
   padding-right: 1rem;
 }
 .pt-0{
   padding-top: 0px;
 }
-.pt-28{
-  padding-top: 7rem;
-}
 .pt-16{
   padding-top: 4rem;
 }
-.pb-20{
-  padding-bottom: 5rem;
+.pt-28{
+  padding-top: 7rem;
+}
+.pt-14{
+  padding-top: 3.5rem;
+}
+.pb-6{
+  padding-bottom: 1.5rem;
 }
 .text-left{
   text-align: left;
@@ -2009,10 +2023,6 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 .font-bold{
   font-weight: 700;
@@ -2693,14 +2703,17 @@ video {
   .sm\:mb-12{
     margin-bottom: 3rem;
   }
+  .sm\:mt-16{
+    margin-top: 4rem;
+  }
   .sm\:mt-auto{
     margin-top: auto;
   }
-  .sm\:mt-20{
-    margin-top: 5rem;
+  .sm\:ml-16{
+    margin-left: 4rem;
   }
-  .sm\:mt-16{
-    margin-top: 4rem;
+  .sm\:mb-\[500px\]{
+    margin-bottom: 500px;
   }
   .sm\:block{
     display: block;
@@ -2719,6 +2732,9 @@ video {
   }
   .sm\:h-\[720px\]{
     height: 720px;
+  }
+  .sm\:h-\[400px\]{
+    height: 400px;
   }
   .sm\:w-1\/2{
     width: 50%;
@@ -2743,9 +2759,6 @@ video {
   .sm\:flex-row{
     flex-direction: row;
   }
-  .sm\:gap-7{
-    gap: 1.75rem;
-  }
   .sm\:gap-5{
     gap: 1.25rem;
   }
@@ -2762,15 +2775,22 @@ video {
     --tw-bg-opacity: 1;
     background-color: rgb(220 193 171 / var(--tw-bg-opacity));
   }
-  .sm\:bg-transparent{
-    background-color: transparent;
-  }
   .sm\:bg-forestgreen{
     --tw-bg-opacity: 1;
     background-color: rgb(27 91 49 / var(--tw-bg-opacity));
   }
+  .sm\:bg-transparent{
+    background-color: transparent;
+  }
   .sm\:bg-none{
     background-image: none;
+  }
+  .sm\:p-2{
+    padding: 0.5rem;
+  }
+  .sm\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
   .sm\:px-4{
     padding-left: 1rem;
@@ -2788,15 +2808,8 @@ video {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
   }
-  .sm\:px-12{
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
   .sm\:pt-16{
     padding-top: 4rem;
-  }
-  .sm\:pt-28{
-    padding-top: 7rem;
   }
   .sm\:pt-24{
     padding-top: 6rem;
@@ -2810,11 +2823,24 @@ video {
   .md\:top-\[95px\]{
     top: 95px;
   }
-  .md\:mt-\[815px\]{
-    margin-top: 815px;
+  .md\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
   }
   .md\:mt-10{
     margin-top: 2.5rem;
+  }
+  .md\:mt-\[815px\]{
+    margin-top: 815px;
+  }
+  .md\:ml-32{
+    margin-left: 8rem;
+  }
+  .md\:mb-16{
+    margin-bottom: 4rem;
+  }
+  .md\:mb-\[840px\]{
+    margin-bottom: 840px;
   }
   .md\:inline{
     display: inline;
@@ -2825,11 +2851,17 @@ video {
   .md\:h-7{
     height: 1.75rem;
   }
+  .md\:h-\[580px\]{
+    height: 580px;
+  }
   .md\:w-20{
     width: 5rem;
   }
   .md\:w-7{
     width: 1.75rem;
+  }
+  .md\:w-1\/3{
+    width: 33.333333%;
   }
   .md\:translate-x-\[-90\%\]{
     --tw-translate-x: -90%;
@@ -2840,6 +2872,19 @@ video {
   }
   .md\:gap-8{
     gap: 2rem;
+  }
+  .md\:p-3{
+    padding: 0.75rem;
+  }
+  .md\:p-6{
+    padding: 1.5rem;
+  }
+  .md\:p-4{
+    padding: 1rem;
+  }
+  .md\:px-16{
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
   .md\:px-20{
     padding-left: 5rem;
@@ -2861,15 +2906,17 @@ video {
     padding-top: 6rem;
     padding-bottom: 6rem;
   }
-  .md\:px-16{
-    padding-left: 4rem;
-    padding-right: 4rem;
+  .md\:pb-32{
+    padding-bottom: 8rem;
   }
   .md\:pt-28{
     padding-top: 7rem;
   }
-  .md\:pb-32{
-    padding-bottom: 8rem;
+  .md\:pt-20{
+    padding-top: 5rem;
+  }
+  .md\:pb-8{
+    padding-bottom: 2rem;
   }
   .md\:text-left{
     text-align: left;
@@ -2884,17 +2931,33 @@ video {
   .lg\:top-\[99px\]{
     top: 99px;
   }
+  .lg\:mx-10{
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+  }
+  .lg\:ml-64{
+    margin-left: 16rem;
+  }
   .lg\:mt-14{
     margin-top: 3.5rem;
   }
-  .lg\:mt-\[819px\]{
-    margin-top: 819px;
+  .lg\:mt-16{
+    margin-top: 4rem;
   }
   .lg\:mt-20{
     margin-top: 5rem;
   }
-  .lg\:mt-16{
-    margin-top: 4rem;
+  .lg\:mt-\[819px\]{
+    margin-top: 819px;
+  }
+  .lg\:ml-48{
+    margin-left: 12rem;
+  }
+  .lg\:mb-24{
+    margin-bottom: 6rem;
+  }
+  .lg\:mb-\[840px\]{
+    margin-bottom: 840px;
   }
   .lg\:block{
     display: block;
@@ -2908,6 +2971,12 @@ video {
   .lg\:h-8{
     height: 2rem;
   }
+  .lg\:h-\[720px\]{
+    height: 720px;
+  }
+  .lg\:h-40{
+    height: 10rem;
+  }
   .lg\:w-10{
     width: 2.5rem;
   }
@@ -2916,6 +2985,9 @@ video {
   }
   .lg\:w-8{
     width: 2rem;
+  }
+  .lg\:w-1\/3{
+    width: 33.333333%;
   }
   .lg\:translate-x-\[-80\%\]{
     --tw-translate-x: -80%;
@@ -2938,9 +3010,16 @@ video {
     margin-right: calc(3rem * var(--tw-space-x-reverse));
     margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
   }
+  .lg\:p-5{
+    padding: 1.25rem;
+  }
   .lg\:px-16{
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+  .lg\:px-24{
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
   .lg\:px-6{
     padding-left: 1.5rem;
@@ -2950,19 +3029,17 @@ video {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
   }
-  .lg\:px-32{
-    padding-left: 8rem;
-    padding-right: 8rem;
-  }
-  .lg\:px-24{
-    padding-left: 6rem;
-    padding-right: 6rem;
-  }
   .lg\:pr-16{
     padding-right: 4rem;
   }
   .lg\:pr-36{
     padding-right: 9rem;
+  }
+  .lg\:pt-28{
+    padding-top: 7rem;
+  }
+  .lg\:pb-16{
+    padding-bottom: 4rem;
   }
   .lg\:text-3xl{
     font-size: 1.875rem;
@@ -2974,6 +3051,11 @@ video {
   }
   .lg\:hover\:rotate-3:hover{
     --tw-rotate: 3deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .lg\:hover\:scale-105:hover{
+    --tw-scale-x: 1.05;
+    --tw-scale-y: 1.05;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 }
