--- a/style.css
+++ b/style.css
@@ -625,11 +625,14 @@ video {
 .mb-4{
   margin-bottom: 1rem;
 }
-.mb-\[840px\]{
-  margin-bottom: 840px;
+.mb-\[400px\]{
+  margin-bottom: 400px;
 }
 .ml-1{
   margin-left: 0.25rem;
+}
+.ml-10{
+  margin-left: 2.5rem;
 }
 .ml-2{
   margin-left: 0.5rem;
@@ -670,32 +673,11 @@ video {
 .mt-\[648px\]{
   margin-top: 648px;
 }
-.ml-auto{
-  margin-left: auto;
-}
-.ml-64{
-  margin-left: 16rem;
-}
-.ml-10{
-  margin-left: 2.5rem;
-}
-.mb-\[600px\]{
-  margin-bottom: 600px;
-}
-.mb-\[1000px\]{
-  margin-bottom: 1000px;
-}
-.mb-\[500px\]{
-  margin-bottom: 500px;
-}
-.mt-\[-500px\]{
-  margin-top: -500px;
+.mt-\[-1280px\]{
+  margin-top: -1280px;
 }
 .mt-\[-400px\]{
   margin-top: -400px;
-}
-.mt-\[-200px\]{
-  margin-top: -200px;
 }
 .box-border{
   box-sizing: border-box;
@@ -787,9 +769,6 @@ video {
 .h-4{
   height: 1rem;
 }
-.h-40{
-  height: 10rem;
-}
 .h-6{
   height: 1.5rem;
 }
@@ -817,17 +796,11 @@ video {
 .h-full{
   height: 100%;
 }
-.h-\[580px\]{
-  height: 580px;
-}
-.h-\[240px\]{
-  height: 240px;
+.h-20{
+  height: 5rem;
 }
 .w-1\/2{
   width: 50%;
-}
-.w-1\/3{
-  width: 33.333333%;
 }
 .w-16{
   width: 4rem;
@@ -854,12 +827,6 @@ video {
   width: 220px;
 }
 .w-full{
-  width: 100%;
-}
-.w-\[320px\]{
-  width: 320px;
-}
-.w-\[100\%\]{
   width: 100%;
 }
 .max-w-3xl{
@@ -1862,9 +1829,6 @@ video {
 .p-2{
   padding: 0.5rem;
 }
-.p-5{
-  padding: 1.25rem;
-}
 .p-6{
   padding: 1.5rem;
 }
@@ -1928,6 +1892,9 @@ video {
 .pb-20{
   padding-bottom: 5rem;
 }
+.pb-6{
+  padding-bottom: 1.5rem;
+}
 .pl-6{
   padding-left: 1.5rem;
 }
@@ -1940,17 +1907,14 @@ video {
 .pt-0{
   padding-top: 0px;
 }
-.pt-16{
-  padding-top: 4rem;
-}
-.pt-28{
-  padding-top: 7rem;
-}
 .pt-14{
   padding-top: 3.5rem;
 }
-.pb-6{
-  padding-bottom: 1.5rem;
+.pt-16{
+  padding-top: 4rem;
+}
+.pt-6{
+  padding-top: 1.5rem;
 }
 .text-left{
   text-align: left;
@@ -2007,10 +1971,6 @@ video {
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
 }
 .text-lg{
   font-size: 1.125rem;
@@ -2703,17 +2663,23 @@ video {
   .sm\:mb-12{
     margin-bottom: 3rem;
   }
+  .sm\:mb-\[840px\]{
+    margin-bottom: 840px;
+  }
+  .sm\:ml-16{
+    margin-left: 4rem;
+  }
   .sm\:mt-16{
     margin-top: 4rem;
   }
   .sm\:mt-auto{
     margin-top: auto;
   }
-  .sm\:ml-16{
-    margin-left: 4rem;
+  .sm\:mt-\[-840px\]{
+    margin-top: -840px;
   }
-  .sm\:mb-\[500px\]{
-    margin-bottom: 500px;
+  .sm\:mt-\[840px\]{
+    margin-top: 840px;
   }
   .sm\:block{
     display: block;
@@ -2732,9 +2698,6 @@ video {
   }
   .sm\:h-\[720px\]{
     height: 720px;
-  }
-  .sm\:h-\[400px\]{
-    height: 400px;
   }
   .sm\:w-1\/2{
     width: 50%;
@@ -2823,9 +2786,11 @@ video {
   .md\:top-\[95px\]{
     top: 95px;
   }
-  .md\:mx-0{
-    margin-left: 0px;
-    margin-right: 0px;
+  .md\:mb-16{
+    margin-bottom: 4rem;
+  }
+  .md\:ml-32{
+    margin-left: 8rem;
   }
   .md\:mt-10{
     margin-top: 2.5rem;
@@ -2833,14 +2798,8 @@ video {
   .md\:mt-\[815px\]{
     margin-top: 815px;
   }
-  .md\:ml-32{
-    margin-left: 8rem;
-  }
-  .md\:mb-16{
-    margin-bottom: 4rem;
-  }
-  .md\:mb-\[840px\]{
-    margin-bottom: 840px;
+  .md\:mt-\[-840px\]{
+    margin-top: -840px;
   }
   .md\:inline{
     display: inline;
@@ -2851,17 +2810,11 @@ video {
   .md\:h-7{
     height: 1.75rem;
   }
-  .md\:h-\[580px\]{
-    height: 580px;
-  }
   .md\:w-20{
     width: 5rem;
   }
   .md\:w-7{
     width: 1.75rem;
-  }
-  .md\:w-1\/3{
-    width: 33.333333%;
   }
   .md\:translate-x-\[-90\%\]{
     --tw-translate-x: -90%;
@@ -2872,12 +2825,6 @@ video {
   }
   .md\:gap-8{
     gap: 2rem;
-  }
-  .md\:p-3{
-    padding: 0.75rem;
-  }
-  .md\:p-6{
-    padding: 1.5rem;
   }
   .md\:p-4{
     padding: 1rem;
@@ -2909,14 +2856,14 @@ video {
   .md\:pb-32{
     padding-bottom: 8rem;
   }
-  .md\:pt-28{
-    padding-top: 7rem;
+  .md\:pb-8{
+    padding-bottom: 2rem;
   }
   .md\:pt-20{
     padding-top: 5rem;
   }
-  .md\:pb-8{
-    padding-bottom: 2rem;
+  .md\:pt-28{
+    padding-top: 7rem;
   }
   .md\:text-left{
     text-align: left;
@@ -2931,12 +2878,11 @@ video {
   .lg\:top-\[99px\]{
     top: 99px;
   }
-  .lg\:mx-10{
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
+  .lg\:mb-24{
+    margin-bottom: 6rem;
   }
-  .lg\:ml-64{
-    margin-left: 16rem;
+  .lg\:ml-48{
+    margin-left: 12rem;
   }
   .lg\:mt-14{
     margin-top: 3.5rem;
@@ -2950,15 +2896,6 @@ video {
   .lg\:mt-\[819px\]{
     margin-top: 819px;
   }
-  .lg\:ml-48{
-    margin-left: 12rem;
-  }
-  .lg\:mb-24{
-    margin-bottom: 6rem;
-  }
-  .lg\:mb-\[840px\]{
-    margin-bottom: 840px;
-  }
   .lg\:block{
     display: block;
   }
@@ -2968,14 +2905,14 @@ video {
   .lg\:h-10{
     height: 2.5rem;
   }
+  .lg\:h-40{
+    height: 10rem;
+  }
   .lg\:h-8{
     height: 2rem;
   }
-  .lg\:h-\[720px\]{
-    height: 720px;
-  }
-  .lg\:h-40{
-    height: 10rem;
+  .lg\:w-1\/3{
+    width: 33.333333%;
   }
   .lg\:w-10{
     width: 2.5rem;
@@ -2985,9 +2922,6 @@ video {
   }
   .lg\:w-8{
     width: 2rem;
-  }
-  .lg\:w-1\/3{
-    width: 33.333333%;
   }
   .lg\:translate-x-\[-80\%\]{
     --tw-translate-x: -80%;
@@ -3029,6 +2963,9 @@ video {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
   }
+  .lg\:pb-16{
+    padding-bottom: 4rem;
+  }
   .lg\:pr-16{
     padding-right: 4rem;
   }
@@ -3037,9 +2974,6 @@ video {
   }
   .lg\:pt-28{
     padding-top: 7rem;
-  }
-  .lg\:pb-16{
-    padding-bottom: 4rem;
   }
   .lg\:text-3xl{
     font-size: 1.875rem;
@@ -3051,11 +2985,6 @@ video {
   }
   .lg\:hover\:rotate-3:hover{
     --tw-rotate: 3deg;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-  .lg\:hover\:scale-105:hover{
-    --tw-scale-x: 1.05;
-    --tw-scale-y: 1.05;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 }
