--- a/style.css
+++ b/style.css
@@ -610,6 +610,10 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
+.mx-6{
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
 .mb-1{
   margin-bottom: 0.25rem;
 }
@@ -678,6 +682,15 @@ video {
 }
 .mt-\[-400px\]{
   margin-top: -400px;
+}
+.mt-\[840px\]{
+  margin-top: 840px;
+}
+.mt-4{
+  margin-top: 1rem;
+}
+.ml-4{
+  margin-left: 1rem;
 }
 .box-border{
   box-sizing: border-box;
@@ -1318,6 +1331,11 @@ video {
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-y-reverse > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 1;
 }
@@ -1880,6 +1898,10 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.px-36{
+  padding-left: 9rem;
+  padding-right: 9rem;
+}
 .pb-1{
   padding-bottom: 0.25rem;
 }
@@ -1983,6 +2005,10 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .font-bold{
   font-weight: 700;
@@ -2681,6 +2707,9 @@ video {
   .sm\:mt-\[840px\]{
     margin-top: 840px;
   }
+  .sm\:mb-\[-840px\]{
+    margin-bottom: -840px;
+  }
   .sm\:block{
     display: block;
   }
@@ -2777,6 +2806,10 @@ video {
   .sm\:pt-24{
     padding-top: 6rem;
   }
+  .sm\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
   .sm\:underline{
     text-decoration-line: underline;
   }
@@ -2785,6 +2818,14 @@ video {
 @media (min-width: 768px){
   .md\:top-\[95px\]{
     top: 95px;
+  }
+  .md\:mx-12{
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+  .md\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
   }
   .md\:mb-16{
     margin-bottom: 4rem;
@@ -2801,6 +2842,15 @@ video {
   .md\:mt-\[-840px\]{
     margin-top: -840px;
   }
+  .md\:mt-0{
+    margin-top: 0px;
+  }
+  .md\:mt-6{
+    margin-top: 1.5rem;
+  }
+  .md\:mr-auto{
+    margin-right: auto;
+  }
   .md\:inline{
     display: inline;
   }
@@ -2816,12 +2866,30 @@ video {
   .md\:w-7{
     width: 1.75rem;
   }
+  .md\:w-\[170px\]{
+    width: 170px;
+  }
+  .md\:w-auto{
+    width: auto;
+  }
   .md\:translate-x-\[-90\%\]{
     --tw-translate-x: -90%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
+  .md\:flex-row{
+    flex-direction: row;
+  }
+  .md\:flex-col{
+    flex-direction: column;
+  }
   .md\:items-start{
     align-items: flex-start;
+  }
+  .md\:justify-center{
+    justify-content: center;
+  }
+  .md\:justify-between{
+    justify-content: space-between;
   }
   .md\:gap-8{
     gap: 2rem;
@@ -2877,6 +2945,10 @@ video {
 @media (min-width: 1024px){
   .lg\:top-\[99px\]{
     top: 99px;
+  }
+  .lg\:mx-20{
+    margin-left: 5rem;
+    margin-right: 5rem;
   }
   .lg\:mb-24{
     margin-bottom: 6rem;
@@ -2963,6 +3035,10 @@ video {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
   }
+  .lg\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
   .lg\:pb-16{
     padding-bottom: 4rem;
   }
@@ -2998,6 +3074,10 @@ video {
 }
 
 @media (min-width: 1280px){
+  .xl\:mx-32{
+    margin-left: 8rem;
+    margin-right: 8rem;
+  }
   .xl\:ml-64{
     margin-left: 16rem;
   }
@@ -3019,6 +3099,14 @@ video {
   .xl\:px-16{
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+  .xl\:px-64{
+    padding-left: 16rem;
+    padding-right: 16rem;
+  }
+  .xl\:px-36{
+    padding-left: 9rem;
+    padding-right: 9rem;
   }
   .xl\:pl-40{
     padding-left: 10rem;
